; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_20005.c_netbios_redirector.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_20005.c_netbios_redirector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"CA\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"AA\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @netbios_redirector() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = call i8* @malloc(i32 31)
  store i8* %3, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @bzero(i8* %4, i32 31)
  store i32 0, i32* %1, align 4
  br label %6

6:                                                ; preds = %12, %0
  %7 = load i32, i32* %1, align 4
  %8 = icmp slt i32 %7, 15
  br i1 %8, label %9, label %15

9:                                                ; preds = %6
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @strcat(i8* %10, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  br label %12

12:                                               ; preds = %9
  %13 = load i32, i32* %1, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %1, align 4
  br label %6

15:                                               ; preds = %6
  %16 = load i8*, i8** %2, align 8
  %17 = call i32 @strcat(i8* %16, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @bzero(i8*, i32) #1

declare dso_local i32 @strcat(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
